# that-human-in-the-loop

./: AGENTS.md  PROJECT_INFO.md  README.md  bfcl-leaderboard.json  chess_com_games_2026-02-10-1.pgn  dashboard.html  index.html  solar-system.html  theme.css
.github/workflows/: odh-sre-kind-e2e.yml  update_bfcl.yml
chess-pgn/: chess_com_games_2026-02-10.pgn
food-vlog-agent/: .env.example  .envrc  .gitignore  AGENTS.md  Makefile  README.md  config.py  load-secrets.sh  main.py  orchestrator.py  pyproject.toml
food-vlog-agent/.github/workflows/: ci.yml
food-vlog-agent/agents/: definitions.py
food-vlog-agent/examples/: sample_itinerary.json
food-vlog-agent/models/: schemas.py
food-vlog-agent/tests/: conftest.py  test_maps_tools.py  test_vision_tools.py  test_youtube_tools.py
food-vlog-agent/tools/: maps_tools.py  mock_data.py  vision_tools.py  youtube_tools.py
functions/: test_update_bfcl.py  update_bfcl_leaderboard.py
functions/api/: subscribe.js
odh-sre-agent/: .env.example  .envrc  .gitignore  AGENTS.md  Makefile  README.md  config.py  kind-config.yaml  load-secrets.sh  main.py  orchestrator.py  pyproject.toml
odh-sre-agent/agents/: definitions.py
odh-sre-agent/models/: schemas.py
odh-sre-agent/scripts/: kind-setup.sh  kind-teardown.sh
odh-sre-agent/test-fixtures/: README.md  faults.yaml  values-kind.yaml
odh-sre-agent/tests/: test_config.py  test_definitions.py  test_orchestrator.py  test_schemas.py
odh-sre-agent/tools/: mock_data.py
